--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ pymysql~=1.0.2
 pandas~=1.4.1
 sqlalchemy~=1.4.31
 mysqlclient~=2.1.0
-geographiclib~=1.52
-geopy~=2.2.0
+plotly~=5.6.0
+dash~=2.2.0
+requests~=2.27.1
